2009-02-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-theme.c (construct_buttons): Use stack index instead of a
	boolean to allow distinguishing non-stackables from secondary windows.
	* src/mb/hd-app.c (hd_app_init): Add asserts to the end of the
	function to enforce certain invariants for stackable windows.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Prepare for the case
	of replacing a stackable window in the middle of a window stack. This
	is done by checking whether the mapped window is on top of the stack.
	The HD restart case requires asking Task Navigator about its knowledge
	of the stackable windows. Removed some g_return_if_fails and replaced
	one with g_assert (silent ignoring of internal inconsistency is the
	worst coding style).

2009-02-07  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-clutter-cache.c (hd_clutter_cache_class_init): Remove
	g_type_class_add_private call for an empty struct, fixes Glib CRITICAL.
	* src/mb/hd-app.h: Replace secondary_window with stack_index, which is
	based on the value set by the HildonStackableWindow widget.
	* src/util/hd-transition.c (hd_transition_close_app),
	src/mb/hd-theme.c (construct_buttons),
	src/mb/hd-app.c (hd_app_destroy, hd_app_init),
	src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Use the new
	stack_index member instead of secondary_window.
	* src/mb/hd-comp-mgr.c: White-space and typo fixes. Added FIXMEs.
	* src/home/hd-render-manager.c (hd_render_manager_set_visible):
	Don't call hd_render_manager_set_input_viewport with an argument,
	it does not take any.
	* src/mb/hd-desktop.c (hd_desktop_realize): Remove unnecessary
	reparenting. (If it is needed, it should be done in libmatchbox side.)

2009-02-06  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home.c (PAN_NEXT_PREVIOUS_PERCENTAGE,
	  hd_home_desktop_release): Set Home panning threshold to 40%.

2009-02-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Little cleanups.
